Adjust HUD, fixed alignment for Tag status cards, fixed not being able to scroll chat in Tag

--- a/code/UI/Base/Chatbox/PlatformerChatBox.scss
+++ b/code/UI/Base/Chatbox/PlatformerChatBox.scss
@@ -7,9 +7,9 @@ iconpanel {
 
 platformerchatbox {
     position: absolute;
-    bottom: 120px;
-    left: 100px;
-    z-index: 80;
+    bottom: 32px;
+    left: 32px;
+    z-index: 1000;
     flex-direction: column;
     width: 550px;
     font-family: "Nunito-Black";
