--- a/code/UI/Base/Course/StatusCard.scss
+++ b/code/UI/Base/Course/StatusCard.scss
@@ -1,6 +1,5 @@
 .status-card {
     width: 180px;
-    height: 200px;
     flex-direction: column;
 
     > .icon {
